[package]
name = "pmi8998_typec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "1.3.2" }
clap = { version = "4.1.6", features = ["derive"] }
clap-num = "1.0.2"
cmacros = "0.1.0"
phf = { version = "0.11.1", features = ["phf_macros", "macros"] }
